--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-title: "Mundana Free Jekyll Theme"
+title: "Ambivert Technologies Private Limited Free  "
 layout: default
 pagination:
     enabled: true
-description: "A great Jekyll theme developed by Sal @wowthemesnet."
+description: "A great   developed by Sal @Ambivertnet."
 ---
 
 
