--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: "Ambivert Technologies Private Limited Free  "
 layout: default
 pagination:
     enabled: true
-description: "A great   developed by Sal @Ambivertnet."
+description: "A great   developed by Sangram @Ambivertnet."
 ---
 
 
