--- a/_pages/author-Sangram.html
+++ b/_pages/author-Sangram.html
@@ -1,7 +1,7 @@
 ---
 title: "Sangram"
 layout: default
-permalink: "/author-Sangram.html"
+permalink: "/author-sangram.html"
 ---
 <div class="container">
 <div class="row justify-content-center">
