--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
-title: "Ambivert Technologies Private Limited Free  "
+title: "WDevops.com | Share and Grow "
 layout: default
 pagination:
     enabled: true
-description: "A great   developed by Sangram @Ambivertnet."
+description: "Share and Grow"
 ---
 
 
